=======
CHANGES
=======

-----
0.6.4
-----



-----
0.6.3
-----

setuptools
==========

* Fixed a bunch of calls to file() that caused crashes on Python 3.

bootstrapping
=============

* Fixed a bug in sorting that caused bootstrap to fail on Python 3.

-----
0.6.2
-----

setuptools
==========

* Added Python 3 support; see docs/python3.txt.
  This closes http://bugs.python.org/setuptools/issue39.

* Added option to run 2to3 automatically when installing on Python 3.
  This closes http://bitbucket.org/tarek/distribute/issue/31.

* Fixed invalid usage of requirement.parse, that broke develop -d.
  This closes http://bugs.python.org/setuptools/issue44.

* Fixed script launcher for 64-bit Windows.
  This closes http://bugs.python.org/setuptools/issue2.

* KeyError when compiling extensions.
  This closes http://bugs.python.org/setuptools/issue41.

bootstrapping
=============

* Fixed bootstrap not working on Windows.
  This closes http://bitbucket.org/tarek/distribute/issue/49.

* Fixed 2.6 dependencies.
  This closes http://bitbucket.org/tarek/distribute/issue/50.

* Make sure setuptools is patched when running through easy_install
  This closes http://bugs.python.org/setuptools/issue40.

-----
0.6.1
-----

setuptools
==========

* package_index.urlopen now catches BadStatusLine and malformed url errors.
  This closes http://bitbucket.org/tarek/distribute/issue/16 and
  http://bitbucket.org/tarek/distribute/issue/18.

* zip_ok is now False by default. This closes 
  http://bugs.python.org/setuptools/issue33.

* Fixed invalid URL error catching. http://bugs.python.org/setuptools/issue20.

* Fixed invalid bootstraping with easy_install installation
  http://bitbucket.org/tarek/distribute/issue/40.
  Thanks to Florian Schulze for the help.

* Removed buildout/bootstrap.py. A new repository will create a specific
  bootstrap.py script.


bootstrapping
=============

* The boostrap process leave setuptools alone if detected in the system